properties update (small), Fehlervermeidung

--- a/shop/src/main/resources/de/shop/messages_de.properties
+++ b/shop/src/main/resources/de/shop/messages_de.properties
@@ -47,6 +47,8 @@ nav.kundenverwaltung.listKunden        = Suche mit Nachname
 nav.kundenverwaltung.upload            = Datei hochladen
 nav.kundenverwaltung.viewKunde         = Suche mit Kundennr.
 nav.userAdmin                          = Rechteverwaltung
+nav.index							 Home
+nav.viewKunde=Kunden suchen
 
 pageNotFound.text  = Die aufgerufene Webseite ist nicht verf\u00FCgbar.
 pageNotFound.title = Seitenfehler
