--- a/shop/src/main/resources/de/shop/messages_de.properties
+++ b/shop/src/main/resources/de/shop/messages_de.properties
@@ -49,7 +49,7 @@ nav.kundenverwaltung.viewKunde         = Suche mit Kundennr.
 nav.userAdmin                          = Rechteverwaltung
 nav.index							 Home
 nav.viewKunde=Kunden suchen
-nav.listArtikel=Alle Artikel
+nav.listArtikel=Suche Artikel
 nav.selectArtikel=W\u00E4hle Artikel
 nav.viewBestellung=Suche Bestellung
 nav.viewWarenkorb=Warenkorb
