--- a/shop/src/main/resources/de/shop/kundenverwaltung/controller/messages_de.properties
+++ b/shop/src/main/resources/de/shop/kundenverwaltung/controller/messages_de.properties
@@ -4,13 +4,8 @@
 createPrivatkunde.agb                       = AGB akzeptieren
 createPrivatkunde.calendar.pattern          = dd. MMM yyyy HH:mm
 createPrivatkunde.duplikat                  = Die Email-Adresse existiert bereits.
-createPrivatkunde.email                     = E-Mail
+createKunde.email = E-Mail
 createPrivatkunde.emailExists               = Der Kunde existiert bereits.
-createPrivatkunde.familienstand             = Familienstand
-createPrivatkunde.familienstand.geschieden  = geschieden
-createPrivatkunde.familienstand.ledig       = ledig
-createPrivatkunde.familienstand.verheiratet = verheiratet
-createPrivatkunde.familienstand.verwitwet   = verwitwet
 createPrivatkunde.geschlecht                = Geschlecht
 createPrivatkunde.geschlecht.maennlich      = m\u00E4nnlich
 createPrivatkunde.geschlecht.weiblich       = weiblich
@@ -20,12 +15,10 @@ createPrivatkunde.hobbies                   = Hobbys
 createPrivatkunde.kategorie                 = Kategorie
 createPrivatkunde.lesen                     = Lesen
 createPrivatkunde.nachname                  = Nachname *
-createPrivatkunde.newsletter                = Newsletter?
 createPrivatkunde.ort                       = Ort *
 createPrivatkunde.password                  = Kennwort
 createPrivatkunde.passwordWdh               = Kennwort (Wdh.)
 createPrivatkunde.plz                       = PLZ *
-createPrivatkunde.reisen                    = Reisen
 createPrivatkunde.required                  = Eingabefelder mit * sind Pflichtfelder
 createPrivatkunde.reset                     = Zur\u00FCcksetzen
 createPrivatkunde.seit                      = Seit
@@ -60,62 +53,39 @@ listKunden.vorname                 = Vorname
 okDelete.text  = Der Kunde mit Nr. {0} wurde gel\u00F6scht.
 okDelete.title = Best\u00E4tigung
 
-updateFirmenkunde.bemerkungen      = Bemerkungen
-updateFirmenkunde.calendar.pattern = dd. MMM yyyy HH:mm
-updateFirmenkunde.concurrentDelete = Der Kunde wurde zwischenzeitlich gel\u00F6scht.
-updateFirmenkunde.concurrentUpdate = Der Kunde wurde zwischenzeitlich aktualisiert.
-updateFirmenkunde.duplikat         = Der Kunde existiert bereits.
-updateFirmenkunde.email            = E-Mail
-updateFirmenkunde.heading          = Kunde Nr. {0} aktualisieren
-updateFirmenkunde.id               = Kundennr.
-updateFirmenkunde.kategorie        = Kategorie
-updateFirmenkunde.keinKunde        = Es wurde kein Firmenkunde zum Aktualisieren ausgew\u00E4hlt.
-updateFirmenkunde.nachname         = Nachname *
-updateFirmenkunde.newsletter       = Newsletter?
-updateFirmenkunde.rabatt           = Rabatt
-updateFirmenkunde.rabatt.convert   = Kein g\u00FCltiger Rabatt, wie z.B. 11,11%
-updateFirmenkunde.required         = Eingabefelder mit * sind Pflichtfelder
-updateFirmenkunde.reset            = Zur\u00FCcksetzen
-updateFirmenkunde.seit             = Seit
-updateFirmenkunde.submit           = OK
-updateFirmenkunde.title            = Kunde aktualisieren
-updateFirmenkunde.umsatz           = Umsatz
-updateFirmenkunde.umsatz.convert   = Keine g\u00FCltige Umsatzangabe, wie z.B. EUR 12.345,67
-updateFirmenkunde.vorname          = Vorname
-
-updatePrivatkunde.calendar.pattern          = dd. MMM yyyy HH:mm
-updatePrivatkunde.concurrentDelete          = Der Kunde wurde zwischenzeitlich gel\u00F6scht.
-updatePrivatkunde.concurrentUpdate          = Der Kunde wurde zwischenzeitlich aktualisiert.
-updatePrivatkunde.duplikat                  = Der Kunde existiert bereits.
-updatePrivatkunde.email                     = E-Mail
-updatePrivatkunde.familienstand             = Familienstand
-updatePrivatkunde.familienstand.geschieden  = geschieden
-updatePrivatkunde.familienstand.ledig       = ledig
-updatePrivatkunde.familienstand.verheiratet = verheiratet
-updatePrivatkunde.familienstand.verwitwet   = verwitwet
-updatePrivatkunde.geschlecht                = Geschlecht
-updatePrivatkunde.geschlecht.maennlich      = m\u00E4nnlich
-updatePrivatkunde.geschlecht.weiblich       = weiblich
-updatePrivatkunde.heading                   = Kunde Nr. {0} bearbeiten
-updatePrivatkunde.hobbies                   = Hobbys
-updatePrivatkunde.id                        = Kundennr.
-updatePrivatkunde.kategorie                 = Kategorie
-updatePrivatkunde.keinKunde                 = Es wurde kein Privatkunde zum Aktualisieren ausgew\u00E4hlt.
-updatePrivatkunde.lesen                     = Lesen
-updatePrivatkunde.nachname                  = Nachname *
-updatePrivatkunde.newsletter                = Newsletter?
-updatePrivatkunde.rabatt                    = Rabatt
-updatePrivatkunde.rabatt.convert            = Kein g\u00FCltiger Rabatt, wie z.B. 11,11%
-updatePrivatkunde.reisen                    = Reisen
-updatePrivatkunde.required                  = Eingabefelder mit * sind Pflichtfelder
-updatePrivatkunde.reset                     = Zur\u00FCcksetzen
-updatePrivatkunde.seit                      = Seit
-updatePrivatkunde.sport                     = Sport
-updatePrivatkunde.submit                    = OK
-updatePrivatkunde.title                     = Kunde bearbeiten
-updatePrivatkunde.umsatz                    = Umsatz
-updatePrivatkunde.umsatz.convert            = Keine g\u00FCltige Umsatzangabe, wie z.B. EUR 12.345,67
-updatePrivatkunde.vorname                   = Vorname
+updateKunde.calendar.pattern = dd. MMM yyyy HH:mm
+updateKunde.concurrentDelete = Der Kunde wurde zwischenzeitlich gel\u00F6scht.
+updateKunde.concurrentUpdate = Der Kunde wurde zwischenzeitlich aktualisiert.
+updateKunde.duplikat = Der Kunde existiert bereits.
+updateKunde.email = E-Mail
+updateKunde.familienstand = Familienstand
+updateKunde.familienstand.geschieden = geschieden
+updateKunde.familienstand.ledig = ledig
+updateKunde.familienstand.verheiratet = verheiratet
+updateKunde.familienstand.verwitwet = verwitwet
+updateKunde.geschlecht = Geschlecht
+updateKunde.geschlecht.maennlich = m\u00E4nnlich
+updateKunde.geschlecht.weiblich = weiblich
+updateKunde.heading = Kunde Nr. {0} bearbeiten
+updateKunde.hobbies = Hobbys
+updateKunde.id = Kundennr.
+updateKunde.kategorie = Kategorie
+updateKunde.keinKunde = Es wurde kein Privatkunde zum Aktualisieren ausgew\u00E4hlt.
+updateKunde.lesen = Lesen
+updateKunde.nachname = Nachname *
+updateKunde.newsletter = Newsletter?
+updateKunde.rabatt = Rabatt
+updateKunde.rabatt.convert = Kein g\u00FCltiger Rabatt, wie z.B. 11,11%
+updateKunde.reisen = Reisen
+updateKunde.required = Eingabefelder mit * sind Pflichtfelder
+updateKunde.reset = Zur\u00FCcksetzen
+updateKunde.seit = Seit
+updateKunde.sport = Sport
+updateKunde.submit = OK
+updateKunde.title = Kunde bearbeiten
+updateKunde.umsatz = Umsatz
+updateKunde.umsatz.convert = Keine g\u00FCltige Umsatzangabe, wie z.B. EUR 12.345,67
+updateKunde.vorname = Vorname
 
 upload.datei.add              = Hinzuf\u00FCgen
 upload.datei.cancel           = Abbrechen
