--- a/shop/src/main/resources/de/shop/messages_en.properties
+++ b/shop/src/main/resources/de/shop/messages_en.properties
@@ -30,8 +30,15 @@ index.welcome            = Hello!
 login.error    = Wrong login data.
 login.heading  = Login
 login.kundeId  = ID
-login.password = Password
 login.submit   = OK
+nav.index=Home
+nav.viewKunde=Search Customer
+nav.listArtikel=Search Article
+nav.selectArtikel=Select Article
+nav.viewBestellung=Search Order
+nav.viewWarenkorb=shopping cart
+nav.home=Home
+login.password = Password
 login.title    = Login
 
 nav.artikelverwaltung                  = Articles
