Kunden anlegen, ändern

--- a/shop/src/main/resources/de/shop/messages_en.properties
+++ b/shop/src/main/resources/de/shop/messages_en.properties
@@ -49,7 +49,7 @@ nav.auth.updateRollen                  = Update roles
 nav.bestellverwaltung                  = Orders
 nav.bestellverwaltung.viewWarenkorb    = Shopping Cart
 nav.kundenverwaltung                   = Customers
-nav.kundenverwaltung.createPrivatkunde = Create private customer
+nav.kundenverwaltung.createPrivatkunde = Create customer
 nav.kundenverwaltung.listKunden        = Search by lastname
 nav.kundenverwaltung.upload            = Upload a file
 nav.kundenverwaltung.viewKunde         = Search by ID
