--- a/shop/src/main/resources/de/shop/messages_de.properties
+++ b/shop/src/main/resources/de/shop/messages_de.properties
@@ -38,12 +38,13 @@ login.title    = Login
 nav.artikelverwaltung                  = Artikel
 nav.artikelverwaltung.listArtikel      = Suche Artikel
 nav.artikelverwaltung.selectArtikel    = Artikel Auswahl
+nav.kundenverwaltung.updateKunde=Personendaten \u00E4ndern
 nav.auth                               = Benutzerverwaltung
 nav.auth.updateRollen                  = Rollen \u00E4ndern
 nav.bestellverwaltung                  = Bestellungen
 nav.bestellverwaltung.viewWarenkorb    = Warenkorb
 nav.kundenverwaltung                   = Kunden
-nav.kundenverwaltung.createPrivatkunde = Neuer Privatkunde
+nav.kundenverwaltung.createPrivatkunde = Neuer Kunde
 nav.kundenverwaltung.listKunden        = Suche mit Nachname
 nav.kundenverwaltung.upload            = Datei hochladen
 nav.kundenverwaltung.viewKunde         = Suche mit Kundennr.
