--- a/shop/src/main/resources/de/shop/bestellverwaltung/controller/messages_en.properties
+++ b/shop/src/main/resources/de/shop/bestellverwaltung/controller/messages_en.properties
@@ -11,7 +11,7 @@ confirmBestellung.title               = Order Confirmation
 viewBestellung.artikel.anzahl      = Amount
 viewBestellung.artikel.bezeichnung = Description
 viewBestellung.artikel.id          = Article id
-viewBestellung.heading             = Bestellte Artikel
+viewBestellung.heading             = ordered articles
 viewBestellung.id                  = Order ID
 viewBestellung.kundeId             = Customer id
 viewBestellung.positionen          = Items
