Exception concurrentUpdate Artikel

--- a/shop/src/main/resources/de/shop/artikelverwaltung/controller/messages_de.properties
+++ b/shop/src/main/resources/de/shop/artikelverwaltung/controller/messages_de.properties
@@ -4,7 +4,7 @@ back = Zur\u00FCck
 viewArtikel.update.alt=Edit
 updateArtikel.heading=Artikel \u00E4ndern
 updateArtikel.title=Artikel \u00E4ndern
-updateArtikel.keinArtikel=Kein Artikel\!
+updateArtikel.keinArtikel=Es wurde kein Artikel zum \u00E4ndern ausgew\u00E4hlt
 updateArtikel.concurrentUpdate=Konkurierendes Update
 createArtikel.vorhanden=Verf\u00FCgbarkeit
 createArtikel.vorhanden.ja=Ja
