--- a/shop/src/main/resources/de/shop/artikelverwaltung/controller/messages_en.properties
+++ b/shop/src/main/resources/de/shop/artikelverwaltung/controller/messages_en.properties
@@ -16,6 +16,7 @@ updateArtikel.reset=Reset
 createArtikel.vorhanden.nein=No
 createArtikel.vorhanden=Availability
 createArtikel.titel=Create article
+updateArtikel.keinArtikel=You did not choose an article
 createArtikel.preis=Price
 createArtikel.reset=Return
 createArtikel.submit=OK
