--- a/shop/src/main/resources/de/shop/kundenverwaltung/controller/messages_de.properties
+++ b/shop/src/main/resources/de/shop/kundenverwaltung/controller/messages_de.properties
@@ -76,7 +76,7 @@ updateKunde.heading = Kunde Nr. {0} bearbeiten
 updateKunde.hobbies = Hobbys
 updateKunde.id = Kundennr.
 updateKunde.kategorie = Kategorie
-updateKunde.keinKunde = Es wurde kein Privatkunde zum Aktualisieren ausgew\u00E4hlt.
+updateKunde.keinKunde = Es wurde kein Kunde zum Aktualisieren ausgew\u00E4hlt.
 updateKunde.lesen = Lesen
 updateKunde.nachname = Nachname *
 updateKunde.newsletter = Newsletter?
