--- a/shop/src/main/resources/de/shop/kundenverwaltung/controller/messages_en.properties
+++ b/shop/src/main/resources/de/shop/kundenverwaltung/controller/messages_en.properties
@@ -8,6 +8,7 @@ viewKunde.adresseHnr=Number
 viewKunde.adresseStr=Street
 viewKunde.kunde.adresse=Address
 viewKunde.upload=Upload File
+updateKunde.keinKunde=You did not choose a costumer
 updateKunde.title=Update Customer
 updateKunde.heading=Create Customer
 updateKunde.nachname=last name
@@ -22,6 +23,7 @@ createPrivatkunde.familienstand.ledig       = single
 createPrivatkunde.familienstand.verheiratet = married
 createPrivatkunde.familienstand.verwitwet   = widowed
 createPrivatkunde.geschlecht                = Gender
+createKunde.email=E-Mail
 createPrivatkunde.geschlecht.maennlich      = male
 updateKunde.email=Email
 updateKunde.submit=OK
