Gesamtpreis zu Warenkorb hinzugefügt

--- a/shop/src/main/resources/de/shop/bestellverwaltung/controller/messages_en.properties
+++ b/shop/src/main/resources/de/shop/bestellverwaltung/controller/messages_en.properties
@@ -31,4 +31,5 @@ viewWarenkorb.heading                    = Shopping Card
 viewWarenkorb.kundeNotFound              = No customer having id {0} found
 viewWarenkorb.reset                      = Reset
 viewWarenkorb.title                      = Shopping Card
+viewWarenkorb.gesamtpreis=Total\:
 viewWarenkorb.update                     = Apply
