--- a/shop/src/main/resources/de/shop/bestellverwaltung/controller/messages_de.properties
+++ b/shop/src/main/resources/de/shop/bestellverwaltung/controller/messages_de.properties
@@ -31,4 +31,5 @@ viewWarenkorb.heading                    = Warenkorb
 viewWarenkorb.kundeNotFound              = Kein Kunde mit Nr. {0} vorhanden
 viewWarenkorb.reset                      = Zur\u00FCcksetzen
 viewWarenkorb.title                      = Warenkorb
+viewWarenkorb.gesamtpreis=Gesamtpreis\:
 viewWarenkorb.update                     = \u00DCbernehmen
