Warenkorb Gesamtpreis funktioniert

--- a/shop/src/main/resources/de/shop/bestellverwaltung/controller/messages_de.properties
+++ b/shop/src/main/resources/de/shop/bestellverwaltung/controller/messages_de.properties
@@ -21,6 +21,7 @@ viewBestellung.zeitstempel         = Datum
 viewWarenkorb.anzahl                     = Anzahl
 viewWarenkorb.artikel.bezeichnung        = Bezeichnung
 viewWarenkorb.artikel.id                 = Artikelnr.
+viewWarenkorb.artikel.preis=Preis
 viewWarenkorb.bestellen                  = Bestellen
 viewWarenkorb.bestellungDuplikat         = Die Bestellung des Kunden {0} vom {1} ist bereits vorhanden.
 viewWarenkorb.datum                      = Datum
