--- a/shop/src/main/resources/de/shop/bestellverwaltung/controller/messages_en.properties
+++ b/shop/src/main/resources/de/shop/bestellverwaltung/controller/messages_en.properties
@@ -21,6 +21,7 @@ viewBestellung.zeitstempel         = Date
 viewWarenkorb.anzahl                     = Amount
 viewWarenkorb.artikel.bezeichnung        = Description
 viewWarenkorb.artikel.id                 = ID
+viewWarenkorb.artikel.preis=Price
 viewWarenkorb.bestellen                  = Order
 viewWarenkorb.bestellungDuplikat         = The order of customer {0} was already submitted on {1}.
 viewWarenkorb.datum                      = Date
