--- a/shop/src/main/resources/de/shop/bestellverwaltung/controller/messages_en.properties
+++ b/shop/src/main/resources/de/shop/bestellverwaltung/controller/messages_en.properties
@@ -9,6 +9,7 @@ confirmBestellung.header              = Do you want to submit the following orde
 confirmBestellung.title               = Order Confirmation
 
 viewBestellung.artikel.anzahl      = Amount
+viewBestellung.artikel.preis=Price in \u20AC
 viewBestellung.artikel.bezeichnung = Description
 viewBestellung.artikel.id          = Article id
 viewBestellung.heading             = ordered articles
@@ -17,6 +18,8 @@ viewBestellung.kundeId             = Customer id
 viewBestellung.positionen          = Items
 viewBestellung.title               = Order
 viewBestellung.zeitstempel         = Date
+viewBestellung.gesamtpreis=sum in \u20AC
+confirmBestellung.artikel.preis=price in \u20AC
 
 viewWarenkorb.anzahl                     = Amount
 viewWarenkorb.artikel.bezeichnung        = Description
