--- a/shop/src/main/resources/de/shop/kundenverwaltung/controller/messages_en.properties
+++ b/shop/src/main/resources/de/shop/kundenverwaltung/controller/messages_en.properties
@@ -154,6 +154,7 @@ viewKunde.artikel.anzahl                 = Amount
 viewKunde.artikel.bezeichnung            = Description
 viewKunde.artikel.id                     = Article ID
 viewKunde.bestellung                     = Order No. 
+viewKunde.bestellung.gesamtpreis=sum
 viewKunde.deleteButtonAlt                = Delete
 viewKunde.deleteKundeBestaetigung        = Are you sure to delete this customer?
 viewKunde.deleteKundeBestellung          = The customer with ID {0} has {1} orders and cannot be deleted.
