layout updateRollen angepasst

--- a/shop/src/main/resources/de/shop/messages_en.properties
+++ b/shop/src/main/resources/de/shop/messages_en.properties
@@ -38,6 +38,7 @@ nav.index=Home
 nav.viewKunde=Search Customer
 nav.listArtikel=Search Article
 nav.selectArtikel=Select Article
+nav.kundenverwaltung.updateRollen=Update Roles
 nav.viewBestellung=Search Order
 nav.viewWarenkorb=shopping cart
 nav.home=Home
