kv message properties -markiert-

--- a/shop/src/main/resources/de/shop/kundenverwaltung/controller/messages_en.properties
+++ b/shop/src/main/resources/de/shop/kundenverwaltung/controller/messages_en.properties
@@ -13,15 +13,15 @@ updateKunde.title=Update Customer
 updateKunde.heading=Create Customer
 updateKunde.nachname=last name
 updateKunde.vorname=first name
-createPrivatkunde.calendar.pattern          = MMM dd, yyyy HH:mm a
-createPrivatkunde.duplikat                  = The email address already exists.
+//createPrivatkunde.calendar.pattern          = MMM dd, yyyy HH:mm a
+//createPrivatkunde.duplikat                  = The email address already exists.
 createPrivatkunde.email                     = Email
-createPrivatkunde.emailExists               = The customer already exists.
-createPrivatkunde.familienstand             = Family Status
-createPrivatkunde.familienstand.geschieden  = divorced
-createPrivatkunde.familienstand.ledig       = single
-createPrivatkunde.familienstand.verheiratet = married
-createPrivatkunde.familienstand.verwitwet   = widowed
+//createPrivatkunde.emailExists               = The customer already exists.
+//createPrivatkunde.familienstand             = Family Status
+//createPrivatkunde.familienstand.geschieden  = divorced
+//createPrivatkunde.familienstand.ledig       = single
+//createPrivatkunde.familienstand.verheiratet = married
+//createPrivatkunde.familienstand.verwitwet   = widowed
 createPrivatkunde.geschlecht                = Gender
 createKunde.email=E-Mail
 createPrivatkunde.geschlecht.maennlich      = male
@@ -31,11 +31,11 @@ updateKunde.rest=Reset
 createPrivatkunde.geschlecht.weiblich       = female
 createPrivatkunde.hausnr                    = No.
 createPrivatkunde.heading                   = Create Customer
-createPrivatkunde.hobbies                   = Hobbies
-createPrivatkunde.kategorie                 = Category
-createPrivatkunde.lesen                     = Reading
+//createPrivatkunde.hobbies                   = Hobbies
+//createPrivatkunde.kategorie                 = Category
+//createPrivatkunde.lesen                     = Reading
 createPrivatkunde.nachname                  = Lastname *
-createPrivatkunde.newsletter                = Newsletter?
+//createPrivatkunde.newsletter                = Newsletter?
 createPrivatkunde.ort                       = City *
 createPrivatkunde.password                  = Password
 createPrivatkunde.passwordWdh               = Password
@@ -43,101 +43,78 @@ createPrivatkunde.plz                       = ZIP Code *
 createPrivatkunde.reisen                    = Travelling
 createPrivatkunde.required                  = Fields annotated with * are required
 createPrivatkunde.reset                     = Reset
-createPrivatkunde.seit                      = Since
-createPrivatkunde.seit.placeholder          = MMM DD, YYYY
-createPrivatkunde.sport                     = Sports
+//createPrivatkunde.seit                      = Since
+//createPrivatkunde.seit.placeholder          = MMM DD, YYYY
+//createPrivatkunde.sport                     = Sports
 createPrivatkunde.strasse                   = Street *
 createPrivatkunde.submit                    = OK
 createPrivatkunde.title                     = Create Customer
-createPrivatkunde.umsatz                    = Revenue
-createPrivatkunde.umsatz.convert            = No valid revenue like 12,345.67
+//createPrivatkunde.umsatz                    = Revenue
+//createPrivatkunde.umsatz.convert            = No valid revenue like 12,345.67
 createPrivatkunde.vorname                   = Firstname
 
 listKunden.deleteButtonAlt         = Delete
 listKunden.deleteKundeBestaetigung = Are you sure to delete this customer?
-listKunden.deleteKundeBestellung   = The customer with ID {0} has {1} orders and cannot be deleted.
+//listKunden.deleteKundeBestellung   = The customer with ID {0} has {1} orders and cannot be deleted.
 listKunden.detailsButtonAlt        = Show details
 listKunden.detailsButtonGETAlt     = Show details (bookmarkable)
-listKunden.detailsButtonPopupAlt   = Details as popup
+//listKunden.detailsButtonPopupAlt   = Details as popup
 listKunden.editButtonAlt           = Update
-listKunden.heading                 = Search again
+//listKunden.heading                 = Search again
 listKunden.inBearbeitung           = In progress...
 listKunden.keineDaten              = No records found.
 listKunden.kundenr                 = ID
 listKunden.nachname                = Lastname
-listKunden.notFound                = No customers found
+//listKunden.notFound                = No customers found
 listKunden.submit                  = OK
 listKunden.sucheNeu                = Search customers
-listKunden.tabelleLaden            = The table of customer records is being loaded...
+//listKunden.tabelleLaden            = The table of customer records is being loaded...
 listKunden.title                   = Customers
 listKunden.vorname                 = Firstname
 
-okDelete.text  = The customer having ID {0} has been deleted.
-okDelete.title = Confirmation
+//okDelete.text  = The customer having ID {0} has been deleted.
+//okDelete.title = Confirmation
 
-updateFirmenkunde.bemerkungen      = Remarks
-updateFirmenkunde.calendar.pattern = MMM dd, yyyy HH:mm a
-updateFirmenkunde.concurrentDelete = Meanwhile the customer has been deleted.
-updateFirmenkunde.concurrentUpdate = Meanwhile the customer has been updated.
-updateFirmenkunde.duplikat         = The customer already exists.
-updateFirmenkunde.email            = Email
-updateFirmenkunde.heading          = Update Customer No. {0}
-updateFirmenkunde.id               = ID
-updateFirmenkunde.kategorie        = Category
-updateFirmenkunde.keinKunde        = There was no selection of a corporate customer to be updated.
-updateFirmenkunde.nachname         = Lastname
-updateFirmenkunde.newsletter       = Newsletter?
-updateFirmenkunde.rabatt           = Discount
-updateFirmenkunde.rabatt.convert   = No valid discount like 11,11%
-updateFirmenkunde.required         = Fields annotated with * are required
-updateFirmenkunde.reset            = Reset
-updateFirmenkunde.seit             = Since
-updateFirmenkunde.submit           = OK
-updateFirmenkunde.title            = Update Customer
-updateFirmenkunde.umsatz           = Revenue
-updateFirmenkunde.umsatz.convert   = No valid revenue like EUR 12,345.67
-updateFirmenkunde.vorname          = Firstname
-
-updatePrivatkunde.calendar.pattern          = MMM dd, yyyy HH:mm a
-updatePrivatkunde.concurrentDelete          = Meanwhile the customer was deleted.
-updatePrivatkunde.concurrentUpdate          = Meanwhile the customer has been updated.
-updatePrivatkunde.duplikat                  = The customer already exists.
-updatePrivatkunde.email                     = Email
-updatePrivatkunde.familienstand             = Family Status
-updatePrivatkunde.familienstand.geschieden  = divorced
-updatePrivatkunde.familienstand.ledig       = single
-updatePrivatkunde.familienstand.verheiratet = married
-updatePrivatkunde.familienstand.verwitwet   = widowed
-updatePrivatkunde.geschlecht                = Gender
-updatePrivatkunde.geschlecht.maennlich      = male
-updatePrivatkunde.geschlecht.weiblich       = female
-updatePrivatkunde.heading                   = Update Customer No. {0}
-updatePrivatkunde.hobbies                   = Hobbies
-updatePrivatkunde.id                        = ID
-updatePrivatkunde.kategorie                 = Category
+//updatePrivatkunde.calendar.pattern          = MMM dd, yyyy HH:mm a
+//updatePrivatkunde.concurrentDelete          = Meanwhile the customer was deleted.
+//updatePrivatkunde.concurrentUpdate          = Meanwhile the customer has been updated.
+//updatePrivatkunde.duplikat                  = The customer already exists.
+updateKunde.email                     = Email
+//updatePrivatkunde.familienstand             = Family Status
+//updatePrivatkunde.familienstand.geschieden  = divorced
+//updatePrivatkunde.familienstand.ledig       = single
+//updatePrivatkunde.familienstand.verheiratet = married
+//updatePrivatkunde.familienstand.verwitwet   = widowed
+//updatePrivatkunde.geschlecht                = Gender
+//updatePrivatkunde.geschlecht.maennlich      = male
+//updatePrivatkunde.geschlecht.weiblich       = female
+updateKunde.heading                   = Update Customer No. {0}
+//updatePrivatkunde.hobbies                   = Hobbies
+//updatePrivatkunde.id                        = ID
+//updatePrivatkunde.kategorie                 = Category
 updatePrivatkunde.keinKunde                 = There was no selection of a private customer to be updated.
-updatePrivatkunde.lesen                     = Reading
-updatePrivatkunde.nachname                  = Lastname *
-updatePrivatkunde.newsletter                = Newsletter?
-updatePrivatkunde.rabatt                    = Discount
-updatePrivatkunde.rabatt.convert            = No valid discount like 11,11%
-updatePrivatkunde.reisen                    = Travelling
-updatePrivatkunde.required                  = Fields annotated with * are required
+//updatePrivatkunde.lesen                     = Reading
+updateKunde.nachname                  = Lastname *
+//updatePrivatkunde.newsletter                = Newsletter?
+//updatePrivatkunde.rabatt                    = Discount
+//updatePrivatkunde.rabatt.convert            = No valid discount like 11,11%
+//updatePrivatkunde.reisen                    = Travelling
+//updatePrivatkunde.required                  = Fields annotated with * are required
 updatePrivatkunde.reset                     = Reset
-updatePrivatkunde.seit                      = Since
-updatePrivatkunde.sport                     = Sports
-updatePrivatkunde.submit                    = OK
-updatePrivatkunde.title                     = Update Customer
-updatePrivatkunde.umsatz                    = Revenue
-updatePrivatkunde.umsatz.convert            = No valid revenue like EUR 12,345.67
-updatePrivatkunde.vorname                   = Firstname
+//updatePrivatkunde.seit                      = Since
+//updatePrivatkunde.sport                     = Sports
+updateKunde.submit                    = OK
+updateKunde.title                     = Update Customer
+//updatePrivatkunde.umsatz                    = Revenue
+//updatePrivatkunde.umsatz.convert            = No valid revenue like EUR 12,345.67
+updateKunde.vorname                   = Firstname
 
 upload.datei.add              = Add
 upload.datei.cancel           = Cancel
 upload.datei.clear            = Clear
 upload.datei.clearAll         = Clear all
 upload.datei.done             = Done.
-upload.datei.error            = An error occured during file upload.
+//upload.datei.error            = An error occured during file upload.
 upload.datei.falscheExtension = Files with the used extension cannot be uploaded
 upload.datei.prompt           = File
 upload.datei.sizeExceeded     = File size restricted.
@@ -157,43 +134,43 @@ viewKunde.bestellung                     = Order No.
 viewKunde.bestellung.gesamtpreis=sum
 viewKunde.deleteButtonAlt                = Delete
 viewKunde.deleteKundeBestaetigung        = Are you sure to delete this customer?
-viewKunde.deleteKundeBestellung          = The customer with ID {0} has {1} orders and cannot be deleted.
+//viewKunde.deleteKundeBestellung          = The customer with ID {0} has {1} orders and cannot be deleted.
 viewKunde.email                          = Email
-viewKunde.familienstand                  = Family Status
-viewKunde.familienstand.geschieden       = divorced
-viewKunde.familienstand.ledig            = single
-viewKunde.familienstand.verheiratet      = married
-viewKunde.familienstand.verwitwet        = widowed
-viewKunde.firmenkunde                    = Corporate customer
-viewKunde.geschlecht                     = Sex
-viewKunde.geschlecht.maennlich           = male
-viewKunde.geschlecht.weiblich            = female
-viewKunde.hobbies                        = Hobbies
+//viewKunde.familienstand                  = Family Status
+//viewKunde.familienstand.geschieden       = divorced
+//viewKunde.familienstand.ledig            = single
+//viewKunde.familienstand.verheiratet      = married
+//viewKunde.familienstand.verwitwet        = widowed
+//viewKunde.firmenkunde                    = Corporate customer
+//viewKunde.geschlecht                     = Sex
+//viewKunde.geschlecht.maennlich           = male
+//viewKunde.geschlecht.weiblich            = female
+//viewKunde.hobbies                        = Hobbies
 viewKunde.inBearbeitung                  = In progress...
-viewKunde.invalidId                      = A customer id must be a valid number like 123456.
-viewKunde.kunde.bemerkungen              = Remarks
+//viewKunde.invalidId                      = A customer id must be a valid number like 123456.
+//viewKunde.kunde.bemerkungen              = Remarks
 viewKunde.kunde.bestellungen             = Orders
 viewKunde.kunde.bild.alt                 = Customer picture
-viewKunde.kunde.bildVideoAudio           = Picture / Video / Adio
+//viewKunde.kunde.bildVideoAudio           = Picture / Video / Adio
 viewKunde.kunde.stammdaten               = Master data
-viewKunde.kundeIdInvalid                 = Invalid customer id {0} is not greater than 0.
-viewKunde.kundenart                      = Status
+//viewKunde.kundeIdInvalid                 = Invalid customer id {0} is not greater than 0.
+//viewKunde.kundenart                      = Status
 viewKunde.kundenr                        = ID
 viewKunde.kundenr.converterError         = The customer ID must be a number.
-viewKunde.kundenr.required               = Customer ID required.
-viewKunde.lesen                          = Reading
+//viewKunde.kundenr.required               = Customer ID required.
+//viewKunde.lesen                          = Reading
 viewKunde.nachname                       = Lastname
-viewKunde.newsletter                     = Newsletter?
-viewKunde.notFound                       = No customer found having ID {0}
-viewKunde.privatkunde                    = Private customer
-viewKunde.rabatt                         = Discount
-viewKunde.reisen                         = Travelling
+//viewKunde.newsletter                     = Newsletter?
+//viewKunde.notFound                       = No customer found having ID {0}
+//viewKunde.privatkunde                    = Private customer
+//viewKunde.rabatt                         = Discount
+//viewKunde.reisen                         = Travelling
 viewKunde.seit                           = Since
-viewKunde.sport                          = Sports
+//viewKunde.sport                          = Sports
 viewKunde.submit                         = OK
 viewKunde.sucheNeu                       = Search customer
 viewKunde.title                          = Customer
-viewKunde.umsatz                         = Revenue
+//viewKunde.umsatz                         = Revenue
 viewKunde.update.alt                     = Edit
 viewKunde.vorname                        = Firstname
 
