--- a/shop/src/main/resources/de/shop/kundenverwaltung/controller/messages_de.properties
+++ b/shop/src/main/resources/de/shop/kundenverwaltung/controller/messages_de.properties
@@ -9,18 +9,17 @@ viewKunde.adresseStr=Strasse
 viewKunde.adresseHnr=Hausnummer
 viewKunde.kunde.adresse=Adresse
 viewKunde.upload=Datei hochladen
-createPrivatkunde.calendar.pattern          = dd. MMM yyyy HH:mm
-createPrivatkunde.duplikat                  = Die Email-Adresse existiert bereits.
+//createPrivatkunde.calendar.pattern = dd. MMM yyyy HH:mm
+//createPrivatkunde.duplikat                  = Die Email-Adresse existiert bereits.
 createKunde.email = E-Mail
-createPrivatkunde.emailExists               = Der Kunde existiert bereits.
+//createPrivatkunde.emailExists               = Der Kunde existiert bereits.
 createPrivatkunde.geschlecht                = Geschlecht
 createPrivatkunde.geschlecht.maennlich      = m\u00E4nnlich
 createPrivatkunde.geschlecht.weiblich       = weiblich
 createPrivatkunde.hausnr                    = Hausnr.
 createPrivatkunde.heading                   = Neuer Kunde
-createPrivatkunde.hobbies                   = Hobbys
-createPrivatkunde.kategorie                 = Kategorie
-createPrivatkunde.lesen                     = Lesen
+//createPrivatkunde.kategorie                 = Kategorie
+//createPrivatkunde.lesen                     = Lesen
 createPrivatkunde.nachname                  = Nachname *
 createPrivatkunde.ort                       = Ort *
 createPrivatkunde.password                  = Kennwort
@@ -28,70 +27,70 @@ createPrivatkunde.passwordWdh               = Kennwort (Wdh.)
 createPrivatkunde.plz                       = PLZ *
 createPrivatkunde.required                  = Eingabefelder mit * sind Pflichtfelder
 createPrivatkunde.reset                     = Zur\u00FCcksetzen
-createPrivatkunde.seit                      = Seit
-createPrivatkunde.seit.placeholder          = TT.MM.JJJJ
-createPrivatkunde.sport                     = Sport
+//createPrivatkunde.seit                      = Seit
+//createPrivatkunde.seit.placeholder          = TT.MM.JJJJ
+//createPrivatkunde.sport                     = Sport
 createPrivatkunde.strasse                   = Stra\u00DFe *
 createPrivatkunde.submit                    = OK
 createPrivatkunde.title                     = Neuer Kunde
-createPrivatkunde.umsatz                    = Umsatz
-createPrivatkunde.umsatz.convert            = Keine g\u00FCltige Umsatzangabe, wie z.B. 12.345,67
+//createPrivatkunde.umsatz                    = Umsatz
+//createPrivatkunde.umsatz.convert            = Keine g\u00FCltige Umsatzangabe, wie z.B. 12.345,67
 createPrivatkunde.vorname                   = Vorname
 
 listKunden.deleteButtonAlt         = L\u00F6schen
 listKunden.deleteKundeBestaetigung = Wollen Sie den Kunden wirklich l\u00F6schen?
-listKunden.deleteKundeBestellung   = Der Kunde Nr. {0} hat {1} Bestellung(en) und kann deshalb nicht gel\u00F6scht werden.
+//listKunden.deleteKundeBestellung   = Der Kunde Nr. {0} hat {1} Bestellung(en) und kann deshalb nicht gel\u00F6scht werden.
 listKunden.detailsButtonAlt        = Details anzeigen
 listKunden.detailsButtonGETAlt     = Details anzeigen (geeignet f\u00FCr Bookmarks)
-listKunden.detailsButtonPopupAlt   = Details als Popup
+//listKunden.detailsButtonPopupAlt   = Details als Popup
 listKunden.editButtonAlt           = Bearbeiten
-listKunden.heading                 = Neue Suche
+//listKunden.heading                 = Neue Suche
 listKunden.inBearbeitung           = In Bearbeitung...
 listKunden.keineDaten              = Keine Datens\u00E4tze gefunden.
 listKunden.kundenr                 = Kundennr.
 listKunden.nachname                = Nachname
-listKunden.notFound                = Keine Kunden gefunden
+//listKunden.notFound                = Keine Kunden gefunden
 listKunden.submit                  = OK
 listKunden.sucheNeu                = Suche Kunden
-listKunden.tabelleLaden            = Die Tabelle der Kundendatens\u00E4tze wird geladen...
+//listKunden.tabelleLaden            = Die Tabelle der Kundendatens\u00E4tze wird geladen...
 listKunden.title                   = Kunden
 listKunden.vorname                 = Vorname
 
-okDelete.text  = Der Kunde mit Nr. {0} wurde gel\u00F6scht.
-okDelete.title = Best\u00E4tigung
+//okDelete.text  = Der Kunde mit Nr. {0} wurde gel\u00F6scht.
+//okDelete.title = Best\u00E4tigung
 
-updateKunde.calendar.pattern = dd. MMM yyyy HH:mm
-updateKunde.concurrentDelete = Der Kunde wurde zwischenzeitlich gel\u00F6scht.
-updateKunde.concurrentUpdate = Der Kunde wurde zwischenzeitlich aktualisiert.
-updateKunde.duplikat = Der Kunde existiert bereits.
+//updateKunde.calendar.pattern = dd. MMM yyyy HH:mm
+//updateKunde.concurrentDelete = Der Kunde wurde zwischenzeitlich gel\u00F6scht.
+//updateKunde.concurrentUpdate = Der Kunde wurde zwischenzeitlich aktualisiert.
+//updateKunde.duplikat = Der Kunde existiert bereits.
 updateKunde.email = E-Mail
-updateKunde.familienstand = Familienstand
-updateKunde.familienstand.geschieden = geschieden
-updateKunde.familienstand.ledig = ledig
-updateKunde.familienstand.verheiratet = verheiratet
-updateKunde.familienstand.verwitwet = verwitwet
-updateKunde.geschlecht = Geschlecht
-updateKunde.geschlecht.maennlich = m\u00E4nnlich
-updateKunde.geschlecht.weiblich = weiblich
+//updateKunde.familienstand = Familienstand
+//updateKunde.familienstand.geschieden = geschieden
+//updateKunde.familienstand.ledig = ledig
+//updateKunde.familienstand.verheiratet = verheiratet
+//updateKunde.familienstand.verwitwet = verwitwet
+//updateKunde.geschlecht = Geschlecht
+//updateKunde.geschlecht.maennlich = m\u00E4nnlich
+//updateKunde.geschlecht.weiblich = weiblich
 updateKunde.heading = Kunde Nr. {0} bearbeiten
-updateKunde.hobbies = Hobbys
-updateKunde.id = Kundennr.
-updateKunde.kategorie = Kategorie
+//updateKunde.hobbies = Hobbys
+//updateKunde.id = Kundennr.
+//updateKunde.kategorie = Kategorie
 updateKunde.keinKunde = Es wurde kein Kunde zum Aktualisieren ausgew\u00E4hlt.
-updateKunde.lesen = Lesen
+//updateKunde.lesen = Lesen
 updateKunde.nachname = Nachname *
-updateKunde.newsletter = Newsletter?
-updateKunde.rabatt = Rabatt
-updateKunde.rabatt.convert = Kein g\u00FCltiger Rabatt, wie z.B. 11,11%
-updateKunde.reisen = Reisen
-updateKunde.required = Eingabefelder mit * sind Pflichtfelder
+//updateKunde.newsletter = Newsletter?
+//updateKunde.rabatt = Rabatt
+//updateKunde.rabatt.convert = Kein g\u00FCltiger Rabatt, wie z.B. 11,11%
+//updateKunde.reisen = Reisen
+//updateKunde.required = Eingabefelder mit * sind Pflichtfelder
 updateKunde.reset = Zur\u00FCcksetzen
-updateKunde.seit = Seit
-updateKunde.sport = Sport
+//updateKunde.seit = Seit
+//updateKunde.sport = Sport
 updateKunde.submit = OK
 updateKunde.title = Kunde bearbeiten
-updateKunde.umsatz = Umsatz
-updateKunde.umsatz.convert = Keine g\u00FCltige Umsatzangabe, wie z.B. EUR 12.345,67
+//updateKunde.umsatz = Umsatz
+//updateKunde.umsatz.convert = Keine g\u00FCltige Umsatzangabe, wie z.B. EUR 12.345,67
 updateKunde.vorname = Vorname
 
 upload.datei.add              = Hinzuf\u00FCgen
@@ -99,7 +98,7 @@ upload.datei.cancel           = Abbrechen
 upload.datei.clear            = Entfernen
 upload.datei.clearAll         = Alle Dateien entfernen
 upload.datei.done             = Fertig.
-upload.datei.error            = Beim Hochladen der Datei ist ein Fehler aufgetreten.
+//upload.datei.error            = Beim Hochladen der Datei ist ein Fehler aufgetreten.
 upload.datei.falscheExtension = Dateien mit dieser Extension k\u00F6nnen nicht hochgeladen werden
 upload.datei.prompt           = Datei
 upload.datei.sizeExceeded     = Die maximale Dateigr\u00F6\u00DFe ist \u00FCberschritten.
@@ -118,43 +117,43 @@ viewKunde.artikel.id                     = Artikelnr.
 viewKunde.bestellung                     = Bestellung Nr.
 viewKunde.deleteButtonAlt                = L\u00F6schen
 viewKunde.deleteKundeBestaetigung        = Wollen Sie den angezeigten Kunden wirklich l\u00F6schen?
-viewKunde.deleteKundeBestellung          = Der Kunde Nr. {0} hat {1} Bestellung(en) und kann deshalb nicht gel\u00F6scht werden.
+//viewKunde.deleteKundeBestellung          = Der Kunde Nr. {0} hat {1} Bestellung(en) und kann deshalb nicht gel\u00F6scht werden.
 viewKunde.email                          = E-Mail
-viewKunde.familienstand                  = Familienstand
-viewKunde.familienstand.geschieden       = geschieden
-viewKunde.familienstand.ledig            = ledig
-viewKunde.familienstand.verheiratet      = verheiratet
-viewKunde.familienstand.verwitwet        = verwitwet
-viewKunde.firmenkunde                    = Firmenkunde
-viewKunde.geschlecht                     = Geschlecht
-viewKunde.geschlecht.maennlich           = m\u00E4nnlich
-viewKunde.geschlecht.weiblich            = weiblich
-viewKunde.hobbies                        = Hobbys
+//viewKunde.familienstand                  = Familienstand
+//viewKunde.familienstand.geschieden       = geschieden
+//viewKunde.familienstand.ledig            = ledig
+//viewKunde.familienstand.verheiratet      = verheiratet
+//viewKunde.familienstand.verwitwet        = verwitwet
+//viewKunde.firmenkunde                    = Firmenkunde
+//viewKunde.geschlecht                     = Geschlecht
+//viewKunde.geschlecht.maennlich           = m\u00E4nnlich
+//viewKunde.geschlecht.weiblich            = weiblich
+//viewKunde.hobbies                        = Hobbys
 viewKunde.inBearbeitung                  = In Bearbeitung...
-viewKunde.invalidId                      = Eine Kundennummer muss eine g\u00FCltige Zahl wie z.B. 123456 sein.
-viewKunde.kunde.bemerkungen              = Bemerkungen
+//viewKunde.invalidId                      = Eine Kundennummer muss eine g\u00FCltige Zahl wie z.B. 123456 sein.
+//viewKunde.kunde.bemerkungen              = Bemerkungen
 viewKunde.kunde.bestellungen             = Bestellungen
 viewKunde.kunde.bild.alt                 = Bild des Kunden
-viewKunde.kunde.bildVideoAudio           = Bild / Video / Audio
+//viewKunde.kunde.bildVideoAudio           = Bild / Video / Audio
 viewKunde.kunde.stammdaten               = Stammdaten
-viewKunde.kundeIdInvalid                 = Die Kundennummer {0} ist ung\u00FCltig. Eine Kundennumer muss gr\u00F6\u00DFer als 0 sein.
-viewKunde.kundenart                      = Art
+//viewKunde.kundeIdInvalid                 = Die Kundennummer {0} ist ung\u00FCltig. Eine Kundennumer muss gr\u00F6\u00DFer als 0 sein.
+//viewKunde.kundenart                      = Art
 viewKunde.kundenr                        = Kundennr.
 viewKunde.kundenr.converterError         = Die Kundennummer muss eine Zahl sein.
-viewKunde.kundenr.required               = Kundennummer erforderlich.
-viewKunde.lesen                          = Lesen
+//viewKunde.kundenr.required               = Kundennummer erforderlich.
+//viewKunde.lesen                          = Lesen
 viewKunde.nachname                       = Nachname
-viewKunde.newsletter                     = Newsletter?
-viewKunde.notFound                       = Kein Kunde mit Nr. {0} vorhanden
-viewKunde.privatkunde                    = Privatkunde
-viewKunde.rabatt                         = Rabatt
-viewKunde.reisen                         = Reisen
+//viewKunde.newsletter                     = Newsletter?
+//viewKunde.notFound                       = Kein Kunde mit Nr. {0} vorhanden
+//viewKunde.privatkunde                    = Privatkunde
+//viewKunde.rabatt                         = Rabatt
+//viewKunde.reisen                         = Reisen
 viewKunde.seit                           = Seit
-viewKunde.sport                          = Sport
+//viewKunde.sport                          = Sport
 viewKunde.submit                         = OK
 viewKunde.sucheNeu                       = Suche einen Kunden
 viewKunde.title                          = Kunde
-viewKunde.umsatz                         = Umsatz
+//viewKunde.umsatz                         = Umsatz
 viewKunde.update.alt                     = Bearbeiten
 viewKunde.vorname                        = Vorname
 
