--- a/shop/src/main/resources/de/shop/artikelverwaltung/controller/messages_en.properties
+++ b/shop/src/main/resources/de/shop/artikelverwaltung/controller/messages_en.properties
@@ -15,7 +15,7 @@ updateArtikel.submit=OK
 updateArtikel.reset=Reset
 createArtikel.vorhanden.nein=No
 createArtikel.vorhanden=Availability
-createArtikel.titel=Create article
+createArtikel.title=Create article
 updateArtikel.keinArtikel=You did not choose an article
 createArtikel.preis=Price
 createArtikel.reset=Return
@@ -37,3 +37,4 @@ selectArtikel.bezeichnung = Article
 selectArtikel.select      = Select
 menu.artikelverwaltung.artikelAuswahl=select
 selectArtikel.title       = Select an Article
+updateArtikel.concurrentUpdate=Concurrent Update
