--- a/shop/src/main/resources/ValidationMessages_en.properties
+++ b/shop/src/main/resources/ValidationMessages_en.properties
@@ -3,6 +3,7 @@
 artikelverwaltung.artikel.id.min = The article ID must be greater or equals {value}.
 nav.kundenverwaltung.updateRollen=Update Roles
 nav.artikelverwaltung.updateArtikel=Update Artikel
+artikelverwaltung.artikel.bezeichnung.NotNull= Descripton can't be null
 
 bestellverwaltung.bestellposition.anzahl.min           = The amount must be greater or equal 0.
 bestellverwaltung.bestellposition.artikel.notNull      = An order item requires an existing article.
