--- a/shop/src/main/resources/de/shop/messages_de.properties
+++ b/shop/src/main/resources/de/shop/messages_de.properties
@@ -30,7 +30,7 @@ index.artikelId          = Artikelnummer
 index.heute              = Heute ist
 index.ladenhueter        = Unsere Ladenh\u00FCter
 index.title              = Hochschule Karlsruhe
-index.welcome            = Hallo!
+index.welcome            = Herzlich Willkommen\!\!
 
 login.error    = Falsche Login-Daten.
 login.heading  = Login
