--- a/shop/src/main/resources/de/shop/messages_en.properties
+++ b/shop/src/main/resources/de/shop/messages_en.properties
@@ -30,7 +30,7 @@ index.artikelId          = Article ID
 index.heute              = Today is
 index.ladenhueter        = Our slow sellers
 index.title              = HS Karlsruhe - University of Applied Sciences
-index.welcome            = Hello!
+index.welcome            = Welcome\!
 
 login.error    = Wrong login data.
 login.heading  = Login
